--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_TOKEN =  'MTEyNDQyNzcxNzU2ODM3NjkxMw.G4hxwf.H4LUY6iggMICAWxjzMGUREQHfVgcoV46fCqqHY'
-TELEGRAM_BOT_TOKEN = '6054738944:AAEkxBU8v64CgUBxcH9jP7S3arKy8TtmAeA'
+DB_TOKEN =  'MTEyNDQyNzcxNzU2ODM3NjkxMw.GRRMYG.P5s__wWhzf95_bDaXAI4ESbUWjyRQTshpNAm_U'
+TELEGRAM_BOT_TOKEN = '6635144587:AAEvZ5truiVLnNcBeNHSNhXNKXJFJZ5Cmwg'
 CLIENT_ID = '1124427717568376913'
 GUILD_ID =  '1191456821156778115'
 OWNER_ID = '857692627873169438'
@@ -7,10 +7,17 @@ NSFW_VERIFY = '1194532954580471859'
 ROLE_ID = '1194529880877047838'
 MENTION_CHANNEL = '1194656304069869690'
 SERVER_STATUS = '1194665740649894008'
-ph =
-xham_live =
-tik_tok = 
-cosplay =
-japan_chinese =
-big_as =
+big_as = '1191457743312265258'
+big_tit = '1193712126368428143'
+big_tit_big_as = '1193712528031764580'
+of = '1191458161727651960'
 images = '1192457303111241748'
+small_as = '1193712830193602720'
+small_tit = '1193712741387612190'
+bdm = '1193712902503419975'
+ph =  '1193712987081560236'
+tik_tok = '1194418940898709554'
+cosplay = '1194527669337997352'
+xham_live = '1193713085215670288'
+japan_chinese = '1194568949237551174'
+nsfw_art = '1195667236875157564'
